# Seno

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  LICENSE.txt  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  database.py  main.py
app/ai/: __init__.py  classifier.py  drafting.py  priority_engine.py  providers.py  responder.py  risk_engine.py  router.py
app/branding/: __init__.py  footer.py
app/calendar/: __init__.py  service.py
app/gmail/: __init__.py  auth.py  reader.py  sender.py
app/integrations/: __init__.py  google_auth.py
app/integrations/calendar/: __init__.py  google_calendar.py
app/memory/: __init__.py  memory.py
app/models/: email.py
app/services/: email_processor.py
app/telegram/: __init__.py  bot.py  voice.py
app/utils/: helpers.py
deploy/systemd/: ai-email-agent.service  cloudflared-email-agent.service
docs/: deployment-ec2-cloudflare.md
scripts/: audit_sensitive_files.py  generate_gmail_token.py  generate_google_token.py  start_production.sh
tests/: test_app.py  test_branding.py  test_classifier.py  test_database_and_memory.py  test_executive_assistant.py  test_gmail.py  test_google_calendar.py  test_models.py  test_monitor.py  test_processor.py  test_providers.py  test_responder.py  test_risk_engine.py  test_telegram.py
