[project]
name = "autonomous-gmail-ai-agent"
version = "1.0.0"
description = "FastAPI Gmail AI agent with OpenAI classification and Telegram approvals."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "openai==1.59.7",
    "google-api-python-client==2.159.0",
    "google-auth==2.37.0",
    "google-auth-oauthlib==1.2.1",
    "google-auth-httplib2==0.2.0",
    "APScheduler==3.11.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
test = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
